# clipop

./: .gitignore  Cargo.toml  README.md
src/: clipboard_helper.rs  component.rs  data_struct.rs  date_helper.rs  event_handler.rs  file_handler.rs  global.rs  layout.rs  main.rs  view.rs
