[package]
name = "clipop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version ="0.10.0", features = ["async-std", "image",'svg'] }
iced_aw = { version = "0.7.0", default-features = false, features = ["date_picker"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }
arboard = "3.2.1"
chrono = "0.4.31"
